# first-test-ptoject

./: pyproject.toml
tests/: test_ecosia.py
