[tool.poetry]
name = "ecosia"
version = "0.1.0"
description = ""
authors = ["dkulikovskyi <dmytro.kulikovskyi@transoftgroup.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selene = {version = "^1.0.2", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
